Overflow of the body and event-card container removed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EddieHub Live</title>
   </head>
-  <body>
+  <body style="overflow: hidden;">
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
